# vllm-gcu

./: .ci_trigger_list.json  .gitignore  .gitmodules  .lfsconfig  .modules.yaml  .owners  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CTestConfig.cmake  ReadMe-EN.md  ReadMe.md  build_utils.py  ctest_install.cmake.in  requirements.txt  setup.py
.epkg/: epkg.conf
.github/workflows/: ci.yml
.pipeline/: build.sh  copy_packages.sh  doc_build.json  docker_image_info.json  get_origin_version.sh  mod_version.config
.pipeline/repo/: manifest.xml
benchmarks/: README.md  benchmark_embedding_rerank.py  benchmark_guided.py  benchmark_latency.py  benchmark_prefix_caching.py  benchmark_serving.py  benchmark_serving_prioritization.py  benchmark_test.py  benchmark_throughput.py  benchmark_vision_language.py  demo_prompt.py  dpllm.py  multilora_inference.py  offline_inference_with_chunked_prefill.py  offline_inference_with_prefix.py  offline_inference_with_speculative_decoding.py  parser_utils.py  router.py
benchmarks/disagg_benchmarks/: toy_proxy_server.py
benchmarks/evaluate_datasets/: README.md  evaluate_embeddings.py  evaluate_reranking.py
benchmarks/vision_language/: interface.py
benchmarks/vision_language/datasets/: __init__.py
benchmarks/vision_language/models/: __init__.py  internvl_input.py  llava_input.py  llava_next_input.py  minicpmo_input.py  minicpmv_input.py  phi3v_input.py  qwen2_vl_input.py
cmake/: add_cc_test_n.cmake  add_py_test_n.cmake  env_config.json  fetch_dependences.cmake  functions.cmake  misc.cmake  package_info.json
cmake/2nd/: caps_version.cmake  pcals_version.cmake  topsgraph_version.cmake  topsop_version.cmake  torch_gcu_version.cmake
csrc/: CPPLINT.cfg  torch_bindings.cpp
csrc/src/: CPPLINT.cfg  advance_step_flashattn.cpp  advance_step_kernel.tops  advance_step_xformers.cpp  awq_gemm_gcu.cpp  batched_rotary_embedding.cpp  cache_kernels.cpp  cache_ops.h  concat_and_cache_mla.cpp  context_attention_forward.cpp  cutlass_scaled_mm.cpp  dispatch_bgmv.cpp  dispatch_bgmv_low_level.cpp  dot_bias_quant.cpp  dynamic_per_token_group_fp8_quant.cpp  dynamic_per_token_group_fp8_quant_with_size.cpp  dynamic_per_token_scaled_fp8_quant.cpp  dynamic_scaled_fp8_quant.cpp  dynamic_scaled_int8_quant.cpp  dynamic_split.cpp  eplb_map_to_physical_and_record.cpp  ets_moe_align_block_size.cpp  expand_batch_to_tokens.cpp  exts_moe_align_block_size.cpp  fatrelu_and_mul.cpp  fused_add_rms_norm.cpp  fused_add_rms_norm_per_token_group_quant_fp8.cpp  fused_add_rms_norm_quant.cpp  fused_add_rms_norm_static_fp8_quant.cpp  fused_add_rms_norm_static_int8_quant.cpp  fused_dispatch_decode.cpp  fused_grouped_topk.cpp  fused_moe_kernel.cpp  fused_moe_quant_kernel.cpp  fused_moe_quant_kernel_ex.cpp  fused_qkv_gemm_quant.cpp  fused_qkv_proj.cpp  gather_cache.cpp  gcu_custom_functions.yaml  gelu_and_mul.cpp  (+74 more)
docs/: Makefile  README.md  ReadMe-EN.md  ReadMe.md
docs/content/source/: conf.py  statement.rst  vllm_gcu_cn_header.rst
docs/makefiles/: doc.mk
docs/source/: conf.py  faqs.md  index.md  installation.md  quick_start.md
docs/source/tutorials/: index.md  multi_card.md  (+2 more)
docs_gcu/internal/: Makefile
docs_libra/: Makefile
docs_libra/content/: Makefile
lmcache/csrc/: calculate_cdf.cpp  decode_cuda_new.cpp  decode_cuda_prefsum.cpp  encode_cuda_new.cpp  gcu_custom_functions.yaml  load_and_reshape_flash.cpp  mem_alloc.cpp  multi_layer_kv_transfer.cpp  multi_layer_kv_transfer_unilateral.cpp  pybind.cpp  reshape_and_cache_back_flash.cpp  rotary_embedding_k_fused.cpp  single_layer_kv_transfer.cpp
tests/: CMakeLists.txt  conftest.py  ctest.cmake  ctest_libra.cmake  ctest_scorpio.cmake  model_utils.py  test_get_ep_indices.py  test_index_add.py  test_offline_inference.py  test_penalty.py  utils.py
tests/core/: test_scheduler.py
tests/kernels/: test_advance_step.py  test_get_ep_indices.py  test_moe_align.py
vllm_gcu/: __init__.py  envs.py  executor.py  gcu.py  gcumem.py  scheduler.py  utils.py
vllm_gcu/attention/: __init__.py
vllm_gcu/compilation/: __init__.py  compiler_interface.py  double_cuda_piecewise_backend.py  fix_functionalization.py  fusion.py  fx_fusion.py  gcu_piecewise_backend.py  pass_manager.py
vllm_gcu/distributed/: __init__.py  all_to_all.py  gcu_communicator.py  parallel_state.py  pyeccl.py  pyeccl_wrapper.py  sp.py  utils.py
vllm_gcu/kernels/: __init__.py  _custom_ops.py  activation.py  fused_moe.py  layernorm.py  linear.py  modular_experts.py  modular_kernel.py  prepare_finalize.py  rotary_embedding.py  sampler.py
vllm_gcu/lora/: lora_ops.py  punica_gcu.py
vllm_gcu/models/: __init__.py
vllm_gcu/patch/: __init__.py
vllm_gcu/spec_decode/: spec_decode_worker.py
vllm_gcu/v1/: gcu_async_model_runner.py
vllm_gcu/worker/: __init__.py  model_runner.py  multi_step_worker.py  worker.py  worker_v1.py
(+257 files in other folders)
